--- a/boards/posix/native_posix/native_posix.yaml
+++ b/boards/posix/native_posix/native_posix.yaml
@@ -2,6 +2,8 @@ identifier: native_posix
 name: Native 32-bit POSIX port
 type: native
 arch: posix
+ram: 65536
+flash: 65536
 toolchain:
   - zephyr
   - llvm
