--- a/boards/posix/native_posix/native_posix_64.yaml
+++ b/boards/posix/native_posix/native_posix_64.yaml
@@ -2,6 +2,8 @@ identifier: native_posix_64
 name: Native 64-bit POSIX port
 type: native
 arch: posix
+ram: 65536
+flash: 65536
 toolchain:
   - zephyr
   - llvm
